--- a/public/mail.html
+++ b/public/mail.html
@@ -129,7 +129,7 @@
         <td align="center" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top;width: 100%;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;padding-left: 0px">
             <div align="center" style="font-size:12px">
 
-                <img class="center fullwidth" align="center" border="0" src="images/logo%20XD.jpg" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: 0;height: auto;line-height: 100%;margin: 0 auto;float: none;width: 100% !important;max-width: 625px" width="625">
+                <img class="center fullwidth" align="center" border="0" src="http://books.okay-agency.ru/mail_logo.jpg" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: 0;height: auto;line-height: 100%;margin: 0 auto;float: none;width: 100% !important;max-width: 625px" width="625">
             </div>
         </td>
     </tr>
@@ -245,7 +245,7 @@
                     <tbody><tr style="vertical-align: top">
                       <td width="37" align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                         <a href="https://www.facebook.com/chitaem.vmeste.ru" title="Facebook" target="_blank">
-                          <img src="images/facebook.png" alt="Facebook" title="Facebook" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: none;height: auto;line-height: 100%;max-width: 32px !important">
+                          <img src="http://books.okay-agency.ru/mail_facebook.png" alt="Facebook" title="Facebook" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: none;height: auto;line-height: 100%;max-width: 32px !important">
                         </a>
                       </td>
                     </tr>
@@ -254,7 +254,7 @@
                     <tbody><tr style="vertical-align: top">
                       <td width="37" align="left" valign="middle" style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
                         <a href="https://vk.com/chitaem.vmeste" title="Twitter" target="_blank">
-                          <img src="images/twitter.png" alt="Twitter" title="Twitter" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: none;height: auto;line-height: 100%;max-width: 32px !important">
+                          <img src="http://books.okay-agency.ru/mail_vk.png" alt="Twitter" title="Twitter" width="32" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: block;border: none;height: auto;line-height: 100%;max-width: 32px !important">
                         </a>
                       </td>
                     </tr>
